--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,13 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/powerDB.jar
+dist.jar=${dist.dir}/tigerdb.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.serializer.jar}
+    ${reference.electroList.jar}:\
+    ${reference.lion.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,13 +56,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=org.martin.powerDB.test.Main
+main.class=org.martin.tigerdb.test.TestMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.serializer=../serializer
-reference.serializer.jar=${project.serializer}/dist/serializer.jar
+project.electroList=../electroList
+project.lion=../lion
+reference.electroList.jar=${project.electroList}/dist/electroList.jar
+reference.lion.jar=${project.lion}/dist/lion.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
