--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.electroList.jar}:\
-    ${reference.lion.jar}
+    ${reference.lion.jar}:\
+    ${reference.electroList.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
