--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.tigerdb</groupId>
     <artifactId>tigerdb</artifactId>
-    <version>2.0</version>
+    <version>2.1</version>
 
     <repositories>
         <repository>
@@ -48,7 +48,12 @@
         <dependency>
             <groupId>org.tigerdb</groupId>
             <artifactId>lion</artifactId>
-            <version>2.0</version>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tigerdb</groupId>
+            <artifactId>tiger-bridge</artifactId>
+            <version>0.1</version>
         </dependency>
     </dependencies>
 
