--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,9 @@
 
     <groupId>org.tigerdb</groupId>
     <artifactId>tigerdb</artifactId>
-    <version>2.1.1</version>
+    <version>2.2</version>
+
+    <name>tigerdb</name>
 
     <repositories>
         <repository>
@@ -48,7 +50,7 @@
         <dependency>
             <groupId>org.tigerdb</groupId>
             <artifactId>lion</artifactId>
-            <version>2.1</version>
+            <version>2.2</version>
         </dependency>
         <dependency>
             <groupId>org.tigerdb</groupId>
