--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <artifactId>tiger-bridge</artifactId>
             <version>0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
